WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
46044
Gradient: Pre-reserve space for 2 color stops
https://bugs.webkit.org/show_bug.cgi?id=46044
Summary
Gradient: Pre-reserve space for 2 color stops
Andreas Kling
Reported
2010-09-18 17:05:45 PDT
Most gradients have only 2 color stops. We can avoid growing the Vector<ColorStop> dynamically in the common case by using an inlineCapacity of 2. This yields a 0.4% speedup on Parcycle <
http://www.mrspeaker.net/dev/parcycle/
>
Attachments
Proposed patch
(1.14 KB, patch)
2010-09-18 17:06 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2010-09-18 17:06:54 PDT
Created
attachment 68019
[details]
Proposed patch
Oliver Hunt
Comment 2
2010-09-18 17:18:05 PDT
Comment on
attachment 68019
[details]
Proposed patch r=me, i suspect this will actually save memory in the common case
Andreas Kling
Comment 3
2010-09-18 17:23:40 PDT
Comment on
attachment 68019
[details]
Proposed patch Clearing flags on attachment: 68019 Committed
r67801
: <
http://trac.webkit.org/changeset/67801
>
Andreas Kling
Comment 4
2010-09-18 17:23:50 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug