2010-09-18  Andreas Kling  <andreas.kling@nokia.com>

Reviewed by Oliver Hunt.

        Gradient: Pre-reserve space for 2 color stops
        https://bugs.webkit.org/show_bug.cgi?id=46044

        Most gradients have only 2 color stops, pre-reserve space for these in m_stops
        to avoid growing the vector dynamically in the common case.

        * platform/graphics/Gradient.h:


Canonical link: https://commits.webkit.org/58507@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@67801 268f45cc-cd09-0410-ab3c-d52691b4dbfc